meecast (0.7.1) unstable; urgency=low

  * Updated Italian translation. Thanks Lorenzo Facca
  * Updated Catalan, Dutch, Finish translations
  * Added description string to gismeteo.ru 
  * Added city 'Hangu' - Pakistan to weather.com
  * Updated Pakistan in yr.no and foreca.com databases
  * Added Serbia to foreca.com database
  * Added Serbia to yr.no database
  * Added Kula(Serbia) to gismeteo.ru database

 -- Vlad Vasiliev <vlad@gas.by>  Sat, 09 Mar 2013 16:31:23 +0200

meecast (0.7) unstable; urgency=low

  * Disabled debug for gismeteo.ru and foreca.com sources
  * Fixed problem with big size of icon in lockscreen applet
  * Fixed problem with Settings pages - Lockscreen and StandbyScreen
  * Added icons for gismeteo.ru 
  * Updated Catalan, Finish, Norway, Arabic, Russian translations

 -- Vlad Vasiliev <vlad@gas.by>  Sat, 09 Mar 2013 16:31:23 +0200

meecast (0.6.10) unstable; urgency=low

  * Added icons for hko.gov.hk
  * Added icons for foreca.com
  * Updated Chinese, Bulgarian, Catalan, Turkish, Germany, Dutch, Slovak translations
  * Added new iconset Atmos. Thanks Andrew Zhilin
  * Fixed problem with feels like in source gismeteo.ru
  * Fixed problem with timezone in source gismeto.ru
  * Fixed problem with updating weather forecast data for new station 
  * Added description string to gismeteo.ru 
  * Fixed problem with first updating weather forecast in source yr.no
  * Changed icon 'fog' for LockScreen. Thanks Red Verge
  * Fixed menu bar position and behaviour. Thanks Nakram.

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 20 Jan 2013 19:31:23 +0200

meecast (0.6.9) unstable; urgency=low

  * Fixed icon ICY in Epona set 
  * Fixed problem with current weather in gismeteo.ru source
  * Added icon and description string to gismeteo.ru 
  * Fixed problem with weather forecast in gismeteo.ru for Australia
  * Changed splash. Thanks Andrew Zhilin (wazd)
  * Added icon for hko.gov.hk
  * Added icons for foreca.com
  * Added UV-index to hko.gov.hk source