@@ -212,6 +212,15 @@ void
 ConfigQml::set_language(QString c)
 {
     ConfigQml::Config::Language(c.toStdString());
+    /* Set new locale for application */
+    for (unsigned int i=0; i<languagesList().size(); i++){
+        if (languagesList().at(i).first == Language()){
+            setlocale (LC_ALL, languagesList().at(i).second.c_str());
+            setlocale (LC_MESSAGES, languagesList().at(i).second.c_str());
+            QLocale::setDefault(QLocale(languagesList().at(i).second.c_str()));
+        }
+    }
+
     saveConfig();
     refreshconfig();
 }
