@@ -1,5 +1,6 @@
 meecast (0.7.1) unstable; urgency=low
 
+  * Added option Language to Settings menu
   * Updated Italian translation. Thanks Lorenzo Facca
   * Updated Catalan, Dutch, Finish translations
   * Added description string to gismeteo.ru 
